Fixed marginRight glitch on mobile layouts

--- a/src/components/topMenu.css
+++ b/src/components/topMenu.css
@@ -64,7 +64,7 @@ button {
   
   @media all and (max-width:800px) {
         .center {
-            margin-left: 100px;
+            margin-left: 75px;
         }
     }
     @media all and (max-width:650px) {
